scrollbar bug fixed

--- a/style.css
+++ b/style.css
@@ -1,22 +1,24 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-body{
-  font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
   font-weight: 600;
-  background: #D8DBE2;
+  background: #d8dbe2;
 }
-.overlay{
+html::-webkit-scrollbar {
+  display: none;
+}
+.overlay {
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 2rem;
 }
-.overlay-p{
+.overlay-p {
   text-align: right;
 }
-
 
 #socials ul {
   position: absolute;
@@ -32,7 +34,7 @@ body{
   display: inline-block;
   padding: 0 30px;
 }
-#text{
+#text {
   transform: rotate(-90deg);
   position: absolute;
   left: 10rem;
@@ -40,7 +42,7 @@ body{
   margin-top: 2rem;
   height: 100vh;
 }
-#text h1{
+#text h1 {
   font-weight: 1200;
   font-weight: bolder;
   font-size: 7.8rem;
@@ -52,7 +54,7 @@ body{
   margin-bottom: 2rem;
   transform: translateX(3.2rem);
 }
-#text .main-yellow{
+#text .main-yellow {
   color: #ffd300;
   text-transform: uppercase;
   position: relative;
@@ -60,38 +62,37 @@ body{
   z-index: -1;
   transform: translateY(30px);
   overflow: hidden;
-  letter-spacing: .3rem;
-
+  letter-spacing: 0.3rem;
 }
 
-#text h3{
+#text h3 {
   font-size: 2.5rem;
   text-transform: uppercase;
   transform: translate(25px, -45px);
 }
-#text p{
+#text p {
   width: 12rem;
   font-weight: 300;
   font-size: 1rem;
-  line-height: .9rem;
+  line-height: 0.9rem;
   transform: translate(25px, -35px);
 }
-#sponsors img{
+#sponsors img {
   width: 200px;
- transform: rotate(-90deg);
- position: absolute;
- right: 100px;
- bottom: 100px;
- text-align: center;
+  transform: rotate(-90deg);
+  position: absolute;
+  right: 100px;
+  bottom: 100px;
+  text-align: center;
 }
-#sponsors p{
+#sponsors p {
   position: absolute;
   right: 100px;
   bottom: 60px;
   text-align: center;
   transform: rotate(-180deg);
 }
-.distortion img{
+.distortion img {
   left: 560px;
   position: absolute;
   height: 100vh;
